<package>

  <name>class_loader</name>

  <version>0.1.1</version>

  <description>
    The class_loader package is a ROS-independent package for loading plugins during runtime and the foundation of the higher level ROS "pluginlib" library. class_loader utilizes the host operating system's runtime loader to open runtime libraries (e.g. .so/.dll files), introspect the library for exported plugin classes, and allows users to instantiate objects of said exported classes without the explicit declaration (i.e. header file) for those classes.
  </description>

  <maintainer email="mshah@willowgarage.com">Mirza Shah</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/class_loader</url>
 
  <build_depend>catkin</build_depend>
  <build_depend>libpoco-dev</build_depend>
  <build_depend>console_bridge</build_depend>

  <run_depend>libpocofoundation9</run_depend>
  <run_depend>console_bridge</run_depend>

  <test_depend>gtest</test_depend>

</package>
