<package>
  <name>class_loader</name>
  <version>0.2.5</version>
  <description>
    The class_loader package is a ROS-independent package for loading plugins during runtime and the foundation of the higher level ROS "pluginlib" library. class_loader utilizes the host operating system's runtime loader to open runtime libraries (e.g. .so/.dll files), introspect the library for exported plugin classes, and allows users to instantiate objects of said exported classes without the explicit declaration (i.e. header file) for those classes.
  </description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <author>Mirza Shah</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/class_loader</url>
 
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>console_bridge</build_depend>
  <build_depend>libpoco-dev</build_depend>

  <run_depend>console_bridge</run_depend>
  <run_depend>libpoco-dev</run_depend>
</package>
